<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.InClassFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_choice"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="81dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/backgroundGroup">

        <RadioButton
            android:id="@+id/rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white_noise" />

        <RadioButton
            android:id="@+id/classical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classical" />

        <RadioButton
            android:id="@+id/piano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piano" />

        <RadioButton
            android:id="@+id/noAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no_audio" />
    </RadioGroup>

    <TextView
        android:id="@+id/playLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/play_lecture"
        android:labelFor="@id/playButton"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/play_description" />

    <TextView
        android:id="@+id/backgroundLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/background_volume"
        android:labelFor="@id/backgroundVolume"/>

    <SeekBar
        android:id="@+id/backgroundVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

</LinearLayout>